Just updated the hours and a few visibility fixes

--- a/BirdsnestCSS.css
+++ b/BirdsnestCSS.css
@@ -3,6 +3,7 @@
 #wrapper {
 	margin-left: auto;
 	margin-right: auto;
+	overflow: auto;
 }
 
 body {
@@ -61,7 +62,6 @@ body {
 #HoursOfOp {
     border: 2px solid;
 	float: left;
-	text-align: center;
 	border-radius: 25px;
 	padding: 10px;
 	padding-bottom: 30px;
@@ -72,6 +72,7 @@ body {
 	min-height: fit-content;
 	margin-top: 30px;
 	font-size: 24px;
+	display: inline;
 }
 
 #Location {
@@ -147,7 +148,7 @@ h1 {
 	position: absolute;
 	left: 0;
 	top: 0;
-	opacity: .3;
+	opacity: .2;
 	background-image: url('images/aboutpic.jpg');
 	background-size: cover;
 	width: 398px;
@@ -164,7 +165,7 @@ h1 {
 	position: absolute;
 	left: 0;
 	top: 0;
-	opacity: .3;
+	opacity: .2;
 	background-image: url('images/foodpic.jpg');
 	background-size: cover;
 	width: 398px;
@@ -181,7 +182,7 @@ h1 {
 	position: absolute;
 	left: 0;
 	top: 0;
-	opacity: .3;
+	opacity: .2;
 	background-image: url('images/drinkpic.jpg');
 	background-size: cover;
 	width: 398px;
